--- a/Maidan/Maidan/Views/Member/Index.cshtml
+++ b/Maidan/Maidan/Views/Member/Index.cshtml
@@ -2,19 +2,109 @@
 @{
 	ViewData["Title"] = "Index";
 	Layout = "_Layout";
-	
+	List<Author> authors = ViewBag.Authors;
+
 }
 
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    @{
-        foreach (Article article in Model)
+<div class="container my-2 text-center">
+    <h2>Articles on Ma<span style="color:#FFC017">i</span>dan.</h2>
+    <hr />
+</div>
+<div class="container my-2">
+	@{
+		int i = 0;
+		foreach (var item in Model)
         {
-            <div class="col">
-                <div class="card h-100">
-                    <a asp-action="GetArticle" asp-controller="Member" asp-route-id="@article.Id">
-                        <img src="/images/articleImages/default-article-image.jpg" class="card-img-top" alt="@article.Title">
-                    </a>
+            <div class="card my-4">
+                <div class="card-header">
+                    <img src="/images/authorImages/@authors[i].Photo" width="20" class="rounded-circle" /> @authors[i].UserName
+                </div>
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="card-body">
+
+                            <a asp-action="GetArticle" asp-route-id="@item.Id"><h5 class="card-title">@item.Title</h5></a>
+                            <p class="card-text">
+                                @{
+                                    if (item.Content.Length > 500)
+                                    {
+                                        @item.Content.Substring(0,500)<text>...</text>
+                                    }
+                                    else
+                                    {
+                                        @item.Content
+                                    }
+                                }
+                            </p>
+                            <div><a asp-action="GetArticle" class="btn btn-primary" asp-route-id="@item.Id">Go Article</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <a asp-action="GetArticle" asp-route-id="@item.Id"><img src="/images/articleImages/@item.Image" width="100" /></a>
+                    </div>
+                </div>
+
+                <div class="card-footer text-muted">
+                    <div class="row d-flex justify-content-around">
+							<div class="col-md-4">
+								<small class="text-muted">@item.NumberOfReads Views</small>
+							</div>
+							<div class="col-md-4">
+								<small class="text-muted">Last updated @(Convert.ToInt32((DateTime.Now - item.UpdateDate).TotalMinutes)) mins ago</small>
+							</div>
+							<div class="col-md-4 text-right">
+								<a asp-action="Index" class="btn-block"><i class="fa-regular fa-comment"></i></a>
+								<i class="fa-regular">45</i>
+							</div>
+					</div>
+				</div>
+			</div>
+			i++;
+		}
+    }
+    <div class="row my-4 text-center">
+        <div><a class="btn btn-warning btn-block rounded-pill" asp-action="AllArticles">Load More</a></div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*<div class="row row-cols-1 row-cols-md-3 g-4">
+	@{
+		int i = 0;
+		foreach (Article article in Model)
+		{
+			<div class="col">
+				<div class="card h-100 text-center">
+					<div class="card-header">
+						<div class="row">
+							<div class="col-md-3">
+								<a asp-action="GetAuthor" asp-controller="Member" asp-route-userName="@authors[i].UserName"><img src="/images/authorImages/@authors[i].Photo" class="w-100 rounded-circle"/></a>
+							</div>
+							<div class="col-md-9 text-left">
+								<a asp-action="GetAuthor" asp-controller="Member">@authors[i].UserName</a>
+							</div>
+						</div> 
+                    </div>
+					<div class="card-body">
+						<a asp-action="GetArticle" asp-controller="Member" asp-route-id="@article.Id">
+                        <img src="/images/articleImages/@article.Image" class="card-img-top w-75 " alt="@article.Title">
+						</a>
+					</div>
+                    
                     <div class="card-body">
                         <a asp-action="GetArticle" asp-controller="Member" asp-route-id="@article.Id"><h5 class="card-title">@article.Title</h5></a>
                         <p class="card-text">@article.Content</p>
@@ -27,15 +117,28 @@
                             <a asp-action="DeleteArticle" asp-controller="Member" asp-route-id="@article.Id" class="btn btn-danger">Delete Article</a>
                         </div class="my-2">
                         <div class="my-2">
-                            <small class="text-muted">Last updated @(Convert.ToInt32((DateTime.Now - article.UpdateDate).TotalMinutes)) mins ago</small>
+						<div class="row">
+							<div class="col-md-4">
+								<small class="text-muted">@article.NumberOfReads Views</small>
+							</div>
+							<div class="col-md-4">
+								<small class="text-muted">Last updated @(Convert.ToInt32((DateTime.Now - article.UpdateDate).TotalMinutes)) mins ago</small>
+							</div>
+							<div class="col-md-4">
+								<a asp-action="Index" class="btn-block"><i class="fa-regular fa-comment"></i></a>
+								<i class="fa-regular">45</i>
+							</div>
+						</div>
+                            
                         </div>
                     </div>
                 </div>
-            </div>
-        }
+			</div>
+			i++;
+		}
     }
 
-</div>
+</div>*@
 
 
 @*
