--- a/Maidan/Maidan/Views/Member/DeleteArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/DeleteArticle.cshtml
@@ -15,19 +15,7 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class="col-sm-10">
-            <img src="/images/articleImages/
-            @{
-                if (!string.IsNullOrEmpty(Model.Image))
-                {
-                     @Model.Image
-
-                }
-                else
-                {
-                     @("default-article-image.jpg")
-
-                }
-             }" />
+            <img src="/images/articleImages/@Model.Image" class="w-25" />
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
@@ -43,9 +31,16 @@
         </dd>
     </dl>
 
-    <form asp-action="DeleteArticle">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List Without Delete</a>
+    <form asp-action="DeleteArticle" class="row">
+        <div class="col-md-4">
+            <a asp-action="Index" class="btn btn-info">Back to List Without Delete</a>
+
+        </div>
+        <div class="col-md-4">
+            <input type="hidden" asp-for="Id" />
+        </div>
+        <div class="col-md-4 text-right">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </div>
     </form>
 </div>
