--- a/Maidan/Maidan/Views/Home/Index.cshtml
+++ b/Maidan/Maidan/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "maidan.";
     List<Article> lastSixArticles = Model.OrderByDescending(a => a.UpdateDate).Take(6).ToList();
     List<Article> top10Articles = Model.OrderByDescending(a => a.NumberOfReads).Take(10).ToList();
-    List<Author> authors = ViewBag.Authors;
+    List<Author> authorsOfTopTenArticles = ViewBag.AuthorsOfTopTenArticles;
+    List<Author> authorsOfLastSixArticles = ViewBag.AuthorsOfLastSixArticles;
 }
 <!-- Begin Site Title
 ================================================== -->
@@ -40,11 +41,12 @@
     <div class="row">
         <div class="col-md-12">
             @{
+                int i = 0;
                 foreach (var item in top10Articles)
                 {
                     <div class="card my-4">
                         <div class="card-header">
-                            <img src="~/images/authorImages/@item.Image" width="20" class="rounded-circle" /> @item.AuthorId
+                            <img src="~/images/authorImages/@authorsOfTopTenArticles[i].Photo" width="20" class="rounded-circle" /> @authorsOfTopTenArticles[i].UserName
                         </div>
                         <div class="row">
                             <div class="col-md-9">
@@ -69,7 +71,6 @@
                                 <a asp-action="GetArticle" asp-route-id="@item.Id"><img src="/images/articleImages/@item.Image" class="w-100" /></a>
                             </div>
                         </div>
-
                         <div class="card-footer text-muted">
                             <div class="row d-flex justify-content-around">
                                 <div class="col-md-4">
@@ -85,84 +86,16 @@
                             </div>
                         </div>
                     </div>
+                    i++;
                 }
             }
         </div>
-@*        <div class="col-md-3">
-            @{
-                foreach (Tag item in ViewBag.Tags)
-                {
-                    <div class="row m-4">
-                    <a class="btn btn-success rounded-pill" asp-action="GetTagArticles">@item.Name</a>
-                    </div>
-                }
-            }
-        </div>*@
     </div>
     
     <div class="row my-2 text-center">
         <div><a class="btn btn-primary btn-block" asp-action="AllArticles">Load More Articles</a></div>
     </div>
 </div>
-
-
-@*<div class="row my-4">
-    <h2>Hot Reload Posts</h2>
-    <hr />
-</div>
-<div class="container row my-4">
-    @{
-        foreach (var item in lastSixArticles)
-        {
-            <div class="col col-md-6">
-                <div class="card mb-3" style="max-width: 540px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="/images/articleImages/@item.Image" class="card-img" alt="@item.Title">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body row">
-                                <h5 class="card-title">@item.Title</h5>
-                                <p class="card-text">
-                                    @{
-                                        if (@item.Content.Length > 300)
-                                        {
-                                            @item.Content.Substring(0, 300)
-                                        }
-                                        else
-                                        {
-                                            @item.Content
-                                        }
-                                    }
-                                </p>
-                                <p class="card-text"><small class="text-muted">Last updated @(Convert.ToInt32((item.UpdateDate-DateTime.Now).TotalMinutes)) mins ago</small></p>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-2 m-4">
-                                    <img src="/images/authorImages/default-author-image.png" width="40" />
-                                </div>
-                                <div class="col-md-10 m-2">
-                                    <span>@{
-                                            if (@item.AuthorId.Length>30)
-                                            {
-                                                @item.AuthorId.Substring(0,30)
-                                            }
-                                            else
-                                            {
-                                                @item.AuthorId
-                                            }
-                                        }</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        }
-    }
-</div>*@
-
-
 
 <!-- Begin Featured
 ================================================== -->
@@ -172,8 +105,10 @@
     </div>
     <div class="card-columns listfeaturedtag">
         @{
+            
             if (lastSixArticles != null)
             {
+                int j = 0;
                 foreach (Article article in lastSixArticles)
                 {
                     <div class="card m-2">
@@ -203,10 +138,10 @@
                                     <div class="metafooter">
                                         <div class="wrapfooter">
                                             <span class="meta-footer-thumb">
-                                                <a asp-action="GetAuthor" asp-route-userName="@article.AuthorId" asp-controller="Home"><img class="author-thumb" src="/images/authorImages/default-author-image.png" alt="Author Avatar"></a>
+                                                <a asp-action="GetAuthor" asp-route-userName="@authorsOfLastSixArticles[j].UserName" asp-controller="Home"><img class="author-thumb" src="/images/authorImages/@authorsOfLastSixArticles[j].Photo" alt="Author Avatar"></a>
                                             </span>
                                             <span class="author-meta">
-                                                <span class="post-name"><a sp-action="GetAuthor" asp-route-userName="@article.AuthorId" asp-controller="Home">@article.AuthorId</a></span><br />
+                                                <span class="post-name"><a asp-action="GetAuthor" asp-route-userName="@authorsOfLastSixArticles[j].UserName" asp-controller="Home">@authorsOfLastSixArticles[j].UserName</a></span><br />
                                                 <span class="post-date">@article.ReleaseDate.ToShortDateString()</span><span class="dot"></span><span class="post-read">@article.NumberOfReads.ToString()<span> Views</span></span>
                                             </span>
                                             <span class="post-read-more"><a asp-action="GetArticle" asp-route-id="@article.Id" title="Read Story"><i class="bi bi-bookmark fa-lg"></i></a></span>
@@ -216,6 +151,7 @@
                             </div>
                         </div>
                     </div>
+                    j++;
                 }
             }
 
@@ -224,57 +160,4 @@
     </div>
 </section>
 <!-- End Featured
-================================================== -->
-
-
-<!-- Begin List Posts
-================================================== -->
-@*<section class="recent-posts">
-    <div class="section-title">
-        <h2><span>All Stories</span></h2>
-    </div>
-    <div class="card-columns listrecent">
-        @{
-            if (Model != null)
-            {
-                foreach (Article article in Model)
-                {
-                    <div class="card m-2">
-                        <a asp-action="GetArticle" asp-route-id="@article.Id">
-                            <img class="img-fluid" src="/images/articleImages/default-article-image.jpg" alt="">
-                        </a>
-                        <div class="card-block">
-                            <h2 class="card-title"><a asp-action="GetArticle" asp-route-id="@article.Id"></a></h2>
-                            <h4 class="card-text">
-                                @{
-                                    if (article.Content.Length > 25)
-                                    {
-                                        @article.Content.Substring(0,25)
-                                    }
-                                    else
-                                    {
-                                        @article.Content
-                                    }
-                                }
-                            </h4>
-                            <div class="metafooter">
-                                <div class="wrapfooter">
-                                    <span class="meta-footer-thumb">
-                                        <a href="author.html"><img class="author-thumb" src="/images/authorImages/default-author-image.png" alt="Author Image"></a>
-                                    </span>
-                                    <span class="author-meta">
-                                        <span class="post-name"><a href="author.html">@article.AuthorId</a></span><br />
-                                        <span class="post-date">@article.ReleaseDate.ToShortDateString()</span><span class="dot"></span><span class="post-read">@article.TotalReadTime</span>
-                                    </span>
-                                    <span class="post-read-more"><a asp-action="GetArticle" asp-route-id="@article.Id" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-            }
-        }
-    </div>
-</section>*@
-<!-- End List Posts
 ================================================== -->
