--- a/Maidan/Maidan/Areas/Admin/Views/Admin/ListTags.cshtml
+++ b/Maidan/Maidan/Areas/Admin/Views/Admin/ListTags.cshtml
@@ -1,46 +1,50 @@
 ﻿@model IEnumerable<TagViewModel>
 
 @{
-    ViewData["Title"] = "ListTags";
+    ViewData["Title"] = "Tags List";
 }
 
-<h1>ListTags</h1>
+<div class="container">
+    <h1 class="text-center">Tags List</h1>
 
-<p>
-    <a class="btn btn-warning m-2 rounded-pill" asp-action="AddTag" asp-controller="Admin">Create New Tag</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            if (Model != null)
-            {
-                @foreach (var item in Model)
+    <p>
+        <a class="btn btn-warning m-2 rounded-pill" asp-action="AddTag" asp-controller="Admin">Create New Tag</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                if (Model != null)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Description)
-                        </td>
-                        <td>
-                            <a class="btn btn-warning m-2 rounded-pill" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                            <a class="btn btn-warning m-2 rounded-pill" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                        </td>
-                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Description)
+                            </td>
+                            <td>
+                                <a class="btn btn-warning m-2 rounded-pill" asp-action="EditTag" asp-route-id="@item.Id">Edit</a> |
+                                <a class="btn btn-warning m-2 rounded-pill" asp-action="DeleteTag" asp-route-id="@item.Id">Delete</a>
+                            </td>
+                        </tr>
+                    }
                 }
             }
-        }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
+
+
