--- a/Maidan/Maidan/Areas/Admin/Views/Admin/ListUsers.cshtml
+++ b/Maidan/Maidan/Areas/Admin/Views/Admin/ListUsers.cshtml
@@ -2,64 +2,90 @@
 
 @{
     ViewData["Title"] = "ListUsers";
+    string message = "";
+    if (TempData["Message"] != null)
+    {
+        message = (string)TempData["Message"];
+    }
+}
+@{
+    if (message.Contains("success"))
+    {
+        <div class="alert alert-success text-center">
+            <h2>@message</h2>
+        </div>
+    }
+    else if (message.Contains("fail"))
+    {
+        <div class="alert alert-danger text-center">
+            <h2>@message</h2>
+        </div>
+    }
 }
 
-<h1>ListUsers</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Photo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="container">
+    <h1 class="text-center m-3">Authors List</h1>
+    <hr />
+    <p>
+        <a asp-action="CreateAdmin" class="btn btn-success">Create New Admin</a>
+    </p>
+    <table class="table m-3">
+        <thead>
             <tr>
-                <td>
-                    <img src="/images/authorImages/@item.Photo">
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    <a class="btn btn-warning m-2 rounded-pill" asp-action="EditUser" asp-route-id="@item.Id">Edit</a> |
-                    <a class="btn btn-warning m-2 rounded-pill" asp-action="DeleteUser" asp-route-id="@item.Id">Delete</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Photo)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.UserName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        <img src="/images/authorImages/@item.Photo">
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        <a class="btn btn-warning m-2 rounded-pill" asp-action="EditUser" asp-route-id="@item.Id">Edit</a> |
+                        <a class="btn btn-warning m-2 rounded-pill" asp-action="DeleteUser" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+
