--- a/Maidan/Maidan/Areas/Admin/Views/Home/Index.cshtml
+++ b/Maidan/Maidan/Areas/Admin/Views/Home/Index.cshtml
@@ -1,22 +1,32 @@
 ﻿@model AdminSignInViewModel
 
-<section class="text-center">
-    <main class="form-signin w-100 m-auto">
-        <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
-        <form asp-action="Index" asp-controller="Home" asp-area="Admin" method="post">
-            <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">Admin Panel</h1>
+<div class="container my-4">
+    <div class="row d-flex justify-content-center align-items-center">
+        <section class="text-center col-md-4">
+            <main class="form-signin w-100 m-auto">
 
-            <div class="form-floating">
-                <input type="text" class="form-control" id="floatingInput" placeholder="Username" asp-for="Username">
-                <label asp-for="Username">Username</label>
-            </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" placeholder="Password" asp-for="Password">
-                <label asp-for="Password">Password</label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign In</button>
-            <p class="mt-5 mb-3 text-muted">© 2022–2023</p>
-        </form>
-    </main>
-</section>
+                <div asp-validation-summary="ModelOnly" class="alert alert-danger my-2"></div>
+                <form asp-action="Index" asp-controller="Home" asp-area="Admin" method="post">
+                    <div class="form-group my-2">
+                        <img class="mb-4" src="/assets/img/logo.png" alt="" width="72" height="57">
+                        <h1 class="h3 mb-3 fw-normal">Admin Panel</h1>
+                    </div>
+                    <div class="form-floating my-2">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Username" asp-for="Username">
+                        <label asp-for="Username">Username</label>
+                    </div>
+                    <div class="form-floating my-2">
+                        <input type="password" class="form-control" placeholder="Password" asp-for="Password">
+                        <label asp-for="Password">Password</label>
+                    </div>
+                    <div class="form-group my-2">
+                        <button class="w-100 btn btn-lg btn-success" type="submit">Sign In</button>
+                        <p class="mt-5 mb-3 text-muted">© 2022–2023</p>
+                    </div>
+                </form>
+            </main>
+        </section>
+    </div>
+</div>
+
+
