--- a/Maidan/Maidan/Views/Home/AllArticles.cshtml
+++ b/Maidan/Maidan/Views/Home/AllArticles.cshtml
@@ -8,7 +8,7 @@
 <!-- Begin Site Title
 ================================================== -->
 
-<div class="row rounded-pill" style="height:20rem; background-color:#FFC017">
+<div class="row rounded-3" style="height:20rem; background-color:#FFC017">
     <div class="col-md-8 d-flex flex-column justify-content-center">
         <div class="row m-3">
             <h1>Stay curious.</h1>
