--- a/Maidan/Maidan/Areas/Admin/Views/Admin/ListTags.cshtml
+++ b/Maidan/Maidan/Areas/Admin/Views/Admin/ListTags.cshtml
@@ -10,13 +10,13 @@
     <p>
         <a class="btn btn-warning m-2 rounded-pill" asp-action="AddTag" asp-controller="Admin">Create New Tag</a>
     </p>
-    <table class="table">
-        <thead>
+    <table class="table table-hover">
+        <thead class="thead-dark">
             <tr>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th></th>
