--- a/Maidan/Maidan/Areas/Admin/Views/Admin/ListUsers.cshtml
+++ b/Maidan/Maidan/Areas/Admin/Views/Admin/ListUsers.cshtml
@@ -23,34 +23,34 @@
     }
 }
 
-<div class="container">
+<div class="container m-4">
     <h1 class="text-center m-3">Authors List</h1>
     <hr />
     <p>
-        <a asp-action="CreateAdmin" class="btn btn-success">Create New Admin</a>
+        <a asp-action="CreateAdmin" class="btn btn-success text-center">Create New Admin</a>
     </p>
-    <table class="table m-3">
+    <table class="table my-3 table-hover">
         <thead>
             <tr>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.Photo)
                 </th>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.UserName)
                 </th>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.PhoneNumber)
                 </th>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.FirstName)
                 </th>
-                <th>
+                <th class="table-dark">
                     @Html.DisplayNameFor(model => model.LastName)
                 </th>
-                <th></th>
+                <th class="table-dark"></th>
             </tr>
         </thead>
         <tbody>
@@ -58,7 +58,7 @@
             {
                 <tr>
                     <td>
-                        <img src="/images/authorImages/@item.Photo">
+                        <img src="/images/authorImages/@item.Photo" class="w-50 rounded-circle">
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.UserName)
@@ -76,11 +76,12 @@
                         @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        <a class="btn btn-warning m-2 rounded-pill" asp-action="EditUser" asp-route-id="@item.Id">Edit</a> |
-                        <a class="btn btn-warning m-2 rounded-pill" asp-action="DeleteUser" asp-route-id="@item.Id">Delete</a>
+                        <div class="col-md-6">
+                            <a class="btn btn-warning m-2 rounded-pill" asp-action="EditUser" asp-route-id="@item.Id">Edit</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a class="btn btn-danger m-2 rounded-pill" asp-action="DeleteUser" asp-route-id="@item.Id">Delete</a>
+                        </div>
                     </td>
                 </tr>
             }
