--- a/Maidan/Maidan/Views/Home/SignIn.cshtml
+++ b/Maidan/Maidan/Views/Home/SignIn.cshtml
@@ -4,7 +4,7 @@
 @{
     if (TempData["Message"] != null)
     {
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success text-center" role="alert">
             @TempData["Message"]
         </div>
     }
