--- a/Maidan/Maidan/Views/Shared/_AdminNavBarPartialView.cshtml
+++ b/Maidan/Maidan/Views/Shared/_AdminNavBarPartialView.cshtml
@@ -11,9 +11,8 @@
                     <img src="/assets/img/logo.png" alt="logo">
                 </a>
                 <!-- Begin Search -->
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
                 </form>
                 <!-- End Search -->
                 <!-- End Logo -->
@@ -33,7 +32,7 @@
                             <a class="nav-link" asp-action="CreateAdmin" asp-controller="Admin" asp-area="Admin">Create New Admin</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link btn btn-warning" asp-action="SignOut" asp-controller="Admin" asp-asp-area="Admin">Sign Out</a>
+                            <a class="nav-link btn btn-warning" asp-action="SignOutAdmin" asp-controller="Admin" asp-area="Admin">Sign Out</a>
                         </li>
                         <li class="nav-item dropdown m-2">
                             <div class="btn-group">
@@ -67,9 +66,8 @@
                 </a>
                 <!-- End Logo -->
                 <!-- Begin Search -->
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <span class="search-icon"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M20.067 18.933l-4.157-4.157a6 6 0 1 0-.884.884l4.157 4.157a.624.624 0 1 0 .884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z"></path></svg></span>
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
                 </form>
                 <!-- End Search -->
                 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
