--- a/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
+++ b/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
@@ -11,9 +11,8 @@
                     <img src="/assets/img/logo.png" alt="logo">
                 </a>
                 <!-- Begin Search -->
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
                 </form>
                 <!-- End Search -->
                 <!-- End Logo -->
@@ -59,15 +58,18 @@
             </button>
             <div class="container">
                 <!-- Begin Logo -->
-                <a class="navbar-brand" asp-action="Index">
-                    <img src="/assets/img/logo.png" alt="logo">
-                </a>
+                <div>
+                    <a class="navbar-brand" asp-action="Index">
+                        <img src="/assets/img/logo.png" alt="logo">
+                    </a>
+                </div>
                 <!-- End Logo -->
                 <!-- Begin Search -->
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <span class="search-icon"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M20.067 18.933l-4.157-4.157a6 6 0 1 0-.884.884l4.157 4.157a.624.624 0 1 0 .884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z"></path></svg></span>
-                </form>
+                <div>
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                        <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+                    </form>
+                </div>
                 <!-- End Search -->
                 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                     <!-- Begin Menu -->
@@ -89,7 +91,6 @@
                         </li>
                     </ul>
                     <!-- End Menu -->
-
                 </div>
             </div>
         </nav>
